--- a/notebooks/test_2d.ipynb
+++ b/notebooks/test_2d.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext dotenv\n",
+    "%dotenv\n",
+    "\n",
     "import numpy\n",
     "import pygetm\n",
     "import pygetm.domain\n",
@@ -94,8 +97,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python388jvsc74a57bd097ae724bfa85b9b34df7982b8bb8c7216f435b92902d749e4263f71162bea840",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -107,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
