--- a/notebooks/Kelvin_wave_in_a_channel.ipynb
+++ b/notebooks/Kelvin_wave_in_a_channel.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,15 +44,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Phase speed of long gravity waves: 9.90 m/s\n",
+      "Coriolis parameter: f = 0.00010 / s\n",
+      "External Rossby radius: 99.05 km\n",
+      "Wave length: 250.00 km\n",
+      "Period: 421 minutes = 7.0 hours\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e91ee81c6c4d4877b5a0af5314305cc1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The black line should always be at the same phase of the Kelvin wave\n"
+     ]
+    }
+   ],
    "source": [
     "L = 500e3\n",
     "H = 10.0\n",
-    "f = 0.0\n",
+    "f = 0.0001\n",
     "\n",
     "# Set up a 2D-domain that is periodic in x-direction\n",
     "domain = pygetm.domain.Domain.create_cartesian(\n",
@@ -134,7 +167,118 @@
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2020-01-01 00:00:00\n",
+      "10 2020-01-01 00:10:00\n",
+      "20 2020-01-01 00:20:00\n",
+      "30 2020-01-01 00:30:00\n",
+      "40 2020-01-01 00:40:00\n",
+      "50 2020-01-01 00:50:00\n",
+      "60 2020-01-01 01:00:00\n",
+      "70 2020-01-01 01:10:00\n",
+      "80 2020-01-01 01:20:00\n",
+      "90 2020-01-01 01:30:00\n",
+      "100 2020-01-01 01:40:00\n",
+      "110 2020-01-01 01:50:00\n",
+      "120 2020-01-01 02:00:00\n",
+      "130 2020-01-01 02:10:00\n",
+      "140 2020-01-01 02:20:00\n",
+      "150 2020-01-01 02:30:00\n",
+      "160 2020-01-01 02:40:00\n",
+      "170 2020-01-01 02:50:00\n",
+      "180 2020-01-01 03:00:00\n",
+      "190 2020-01-01 03:10:00\n",
+      "200 2020-01-01 03:20:00\n",
+      "210 2020-01-01 03:30:00\n",
+      "220 2020-01-01 03:40:00\n",
+      "230 2020-01-01 03:50:00\n",
+      "240 2020-01-01 04:00:00\n",
+      "250 2020-01-01 04:10:00\n",
+      "260 2020-01-01 04:20:00\n",
+      "270 2020-01-01 04:30:00\n",
+      "280 2020-01-01 04:40:00\n",
+      "290 2020-01-01 04:50:00\n",
+      "300 2020-01-01 05:00:00\n",
+      "310 2020-01-01 05:10:00\n",
+      "320 2020-01-01 05:20:00\n",
+      "330 2020-01-01 05:30:00\n",
+      "340 2020-01-01 05:40:00\n",
+      "350 2020-01-01 05:50:00\n",
+      "360 2020-01-01 06:00:00\n",
+      "370 2020-01-01 06:10:00\n",
+      "380 2020-01-01 06:20:00\n",
+      "390 2020-01-01 06:30:00\n",
+      "400 2020-01-01 06:40:00\n",
+      "410 2020-01-01 06:50:00\n",
+      "420 2020-01-01 07:00:00\n",
+      "430 2020-01-01 07:10:00\n",
+      "440 2020-01-01 07:20:00\n",
+      "450 2020-01-01 07:30:00\n",
+      "460 2020-01-01 07:40:00\n",
+      "470 2020-01-01 07:50:00\n",
+      "480 2020-01-01 08:00:00\n",
+      "490 2020-01-01 08:10:00\n",
+      "500 2020-01-01 08:20:00\n",
+      "510 2020-01-01 08:30:00\n",
+      "520 2020-01-01 08:40:00\n",
+      "530 2020-01-01 08:50:00\n",
+      "540 2020-01-01 09:00:00\n",
+      "550 2020-01-01 09:10:00\n",
+      "560 2020-01-01 09:20:00\n",
+      "570 2020-01-01 09:30:00\n",
+      "580 2020-01-01 09:40:00\n",
+      "590 2020-01-01 09:50:00\n",
+      "600 2020-01-01 10:00:00\n",
+      "610 2020-01-01 10:10:00\n",
+      "620 2020-01-01 10:20:00\n",
+      "630 2020-01-01 10:30:00\n",
+      "640 2020-01-01 10:40:00\n",
+      "650 2020-01-01 10:50:00\n",
+      "660 2020-01-01 11:00:00\n",
+      "670 2020-01-01 11:10:00\n",
+      "680 2020-01-01 11:20:00\n",
+      "690 2020-01-01 11:30:00\n",
+      "700 2020-01-01 11:40:00\n",
+      "710 2020-01-01 11:50:00\n",
+      "720 2020-01-01 12:00:00\n",
+      "730 2020-01-01 12:10:00\n",
+      "740 2020-01-01 12:20:00\n",
+      "750 2020-01-01 12:30:00\n",
+      "760 2020-01-01 12:40:00\n",
+      "770 2020-01-01 12:50:00\n",
+      "780 2020-01-01 13:00:00\n",
+      "790 2020-01-01 13:10:00\n",
+      "800 2020-01-01 13:20:00\n",
+      "810 2020-01-01 13:30:00\n",
+      "820 2020-01-01 13:40:00\n",
+      "830 2020-01-01 13:50:00\n",
+      "840 2020-01-01 14:00:00\n",
+      "850 2020-01-01 14:10:00\n",
+      "860 2020-01-01 14:20:00\n",
+      "870 2020-01-01 14:30:00\n",
+      "880 2020-01-01 14:40:00\n",
+      "890 2020-01-01 14:50:00\n",
+      "900 2020-01-01 15:00:00\n",
+      "910 2020-01-01 15:10:00\n",
+      "920 2020-01-01 15:20:00\n",
+      "930 2020-01-01 15:30:00\n",
+      "940 2020-01-01 15:40:00\n",
+      "950 2020-01-01 15:50:00\n",
+      "960 2020-01-01 16:00:00\n",
+      "970 2020-01-01 16:10:00\n",
+      "980 2020-01-01 16:20:00\n",
+      "990 2020-01-01 16:30:00\n",
+      "1000 2020-01-01 16:40:00\n",
+      "1010 2020-01-01 16:50:00\n",
+      "1020 2020-01-01 17:00:00\n",
+      "1030 2020-01-01 17:10:00\n"
+     ]
+    }
+   ],
    "source": [
     "dist_U = domain.distribute(sim.momentum.U_)\n",
     "dist_V = domain.distribute(sim.momentum.V_)\n",
@@ -174,8 +318,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python388jvsc74a57bd097ae724bfa85b9b34df7982b8bb8c7216f435b92902d749e4263f71162bea840",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -187,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
