--- a/notebooks/test_2d.ipynb
+++ b/notebooks/test_2d.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy\n",
     "import pygetm\n",
-    "import pygetm.domain\n",
     "\n",
     "# Note: \"%matplotlib widget\" below enables interactive plots but requires https://github.com/matplotlib/ipympl\n",
     "# Alternatively you could use \"%matplotlib notebook\" (deprecated).\n",
@@ -18,33 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f87f63b081744a10aedb724bf6044815",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set up rectangular domain with outer points masked\n",
     "domain = pygetm.domain.Domain.create_cartesian(500.*numpy.arange(100), 500.*numpy.arange(30), 1, lat=0, H=50)\n",
     "sim = pygetm.Simulation(domain, runtype=1, advection_scheme=1)\n",
     "\n",
     "# Idealized surface forcing\n",
-    "tausx, tausx_ = domain.T.array(fill=0.)\n",
-    "tausx[...] = 0.01\n",
-    "tausy_ = numpy.zeros_like(tausx_)\n",
+    "tausx, tausx_ = domain.U.array(fill=0.01)\n",
+    "tausy, tausy_ = domain.V.array(fill=0.)\n",
     "sp, sp_ = domain.T.array(fill=0.)\n",
     "\n",
     "# Time\n",
@@ -57,13 +40,13 @@
     "pc = ax.pcolormesh(domain.T.xi, domain.T.yi, domain.T.z, vmin=-0.001, vmax=0.001)\n",
     "cb = fig.colorbar(pc)\n",
     "cb.set_label('elevation (m)')\n",
-    "Q = ax.quiver(domain.T.x[::nsample, ::nsample], domain.T.y[::nsample, ::nsample], sim.momentum.U[::nsample, ::nsample], sim.momentum.V[::nsample, ::nsample], scale=.3)\n",
+    "Q = ax.quiver(domain.T.x[::nsample, ::nsample], domain.T.y[::nsample, ::nsample], sim.U[::nsample, ::nsample], sim.V[::nsample, ::nsample], scale=.3)\n",
     "title = ax.set_title('time: 0 s')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -73,15 +56,15 @@
     "times = timestep * numpy.arange(ntime)\n",
     "Us = numpy.empty_like(times)\n",
     "for istep, time in enumerate(times):\n",
-    "    Us[istep] = sim.momentum.U.mean()\n",
-    "    sim.pressure.surface(domain.T.z_, sp_)\n",
-    "    sim.momentum.uv_momentum_2d(timestep, tausx_, tausy_, sim.pressure.dpdx_, sim.pressure.dpdy_)\n",
-    "    sim.sealevel.update(timestep, sim.momentum.U_, sim.momentum.V_)\n",
+    "    Us[istep] = sim.U.mean()\n",
+    "    sim.update_surface_pressure_gradient(domain.T.z_, sp_)\n",
+    "    sim.uv_momentum_2d(timestep, tausx_, tausy_, sim.dpdx_, sim.dpdy_)\n",
+    "    sim.update_sealevel(timestep, sim.U_, sim.V_)\n",
     "    sim.update_depth()\n",
     "\n",
     "    # Update velocity plot\n",
     "    if istep % plotting_interval == 0:\n",
-    "        Q.set_UVC(sim.momentum.U[::nsample, ::nsample], sim.momentum.V[::nsample, ::nsample])\n",
+    "        Q.set_UVC(sim.U[::nsample, ::nsample], sim.V[::nsample, ::nsample])\n",
     "        title.set_text('time: %s s' % time)\n",
     "        pc.set_array(domain.T.z.ravel())\n",
     "        fig.canvas.draw()"
@@ -89,24 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9be4a88b4404340b23d6a3b29b2ffd6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig, ax = matplotlib.pyplot.subplots()\n",
     "ax.plot(times, Us)\n",
@@ -124,9 +92,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python388jvsc74a57bd097ae724bfa85b9b34df7982b8bb8c7216f435b92902d749e4263f71162bea840",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -138,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
