--- a/notebooks/test_2d_periodic.ipynb
+++ b/notebooks/test_2d_periodic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d7da89cbb7a9456f93210c20b8781f3d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Set up rectangular domain\n",
     "domain = pygetm.domain.Domain.create_cartesian(numpy.linspace(0., 50000, 100), numpy.linspace(0., 30000, 30), 1, periodic_x=True, lat=0., H=50)\n",
@@ -46,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -79,98 +94,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce53a14140844fedbd5a70e0f5a1efbf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "fig, ax = matplotlib.pyplot.subplots()\n",
     "ax.plot(times, Us)\n",
     "ax.set_title('mean U')\n",
     "ax.grid()"
    ]
-  },
-  {
-   "source": [
-    "# Let's try this with an island in the center of the domain"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set up rectangular domain with and circular island in the center\n",
-    "domain = pygetm.domain.Domain.create_cartesian(numpy.linspace(0., 50000, 100), numpy.linspace(0., 30000, 30), 1, periodic_x=True, lat=0., H=50)\n",
-    "distance_from_center = numpy.sqrt((domain.x - 25000)**2 + (domain.y - 15000)**2)\n",
-    "domain.mask[distance_from_center < 5000] = 0\n",
-    "sim = pygetm.Simulation(domain, runtype=1, advection_scheme=1, apply_bottom_friction=False)\n",
-    "\n",
-    "# Idealized surface forcing\n",
-    "tausx, tausx_ = domain.U.array(fill=0.01)\n",
-    "tausy, tausy_ = domain.V.array(fill=0.)\n",
-    "sp, sp_ = domain.T.array(fill=0.)\n",
-    "\n",
-    "# Time\n",
-    "timestep = 5.\n",
-    "ntime = int(3600. // timestep)\n",
-    "\n",
-    "# Set up velocity plot\n",
-    "nsample = 4\n",
-    "fig, ax = matplotlib.pyplot.subplots()\n",
-    "masked_z = numpy.ma.array(domain.T.z, mask=domain.T.mask==0)\n",
-    "pc = ax.pcolormesh(domain.T.xi, domain.T.yi, masked_z, vmin=-0.001, vmax=0.001)\n",
-    "cb = fig.colorbar(pc)\n",
-    "cb.set_label('elevation (m)')\n",
-    "Q = ax.quiver(domain.T.x[::nsample, ::nsample], domain.T.y[::nsample, ::nsample], sim.U[::nsample, ::nsample], sim.V[::nsample, ::nsample], scale=.3)\n",
-    "title = ax.set_title('time: 0 s')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dist_U = domain.distribute(sim.U_)\n",
-    "dist_V = domain.distribute(sim.V_)\n",
-    "dist_U.update_halos()\n",
-    "dist_V.update_halos()\n",
-    "plotting_interval = 5\n",
-    "times = timestep * numpy.arange(ntime)\n",
-    "Us = numpy.empty_like(times)\n",
-    "for istep, time in enumerate(times):\n",
-    "    Us[istep] = sim.U.mean()\n",
-    "    \n",
-    "    sim.update_surface_pressure_gradient(domain.T.z_, sp_)\n",
-    "    sim.uv_momentum_2d(timestep, tausx_, tausy_, sim.dpdx_, sim.dpdy_)\n",
-    "    dist_U.update_halos()\n",
-    "    dist_V.update_halos()\n",
-    "    sim.update_sealevel(timestep, sim.U_, sim.V_)\n",
-    "    sim.update_depth()\n",
-    "\n",
-    "    # Update velocity plot\n",
-    "    if istep % plotting_interval == 0:\n",
-    "        Q.set_UVC(sim.U[::nsample, ::nsample], sim.V[::nsample, ::nsample])\n",
-    "        title.set_text('time: %s s' % time)\n",
-    "        pc.set_array(masked_z.ravel())\n",
-    "        fig.canvas.draw()    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python388jvsc74a57bd097ae724bfa85b9b34df7982b8bb8c7216f435b92902d749e4263f71162bea840",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -182,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
