--- a/notebooks/Kelvin_wave_in_a_channel.ipynb
+++ b/notebooks/Kelvin_wave_in_a_channel.ipynb
@@ -65,9 +65,9 @@
     "sim = pygetm.Simulation(domain, runtype=1, advection_scheme=1)\n",
     "\n",
     "# No surface forcing\n",
-    "tausx, tausx_ = domain.U.array(fill=0.0)\n",
-    "tausy, tausy_ = domain.V.array(fill=0.0)\n",
-    "sp, sp_ = domain.T.array(fill=0.0)\n",
+    "tausx = domain.U.array(fill=0.0)\n",
+    "tausy = domain.V.array(fill=0.0)\n",
+    "sp = domain.T.array(fill=0.0)\n",
     "\n",
     "# Define, extract, and/or calculate physical constants\n",
     "g = 9.81\n",
@@ -88,13 +88,13 @@
     "    eta_0\n",
     "    * np.exp(-domain.T.yi[1:, 1:] / a)\n",
     "    * np.sin(k * domain.T.xi[1:, 1:])\n",
-    "    * domain.T.mask\n",
+    "    * domain.T.mask[:,:]\n",
     ")\n",
     "sim.U[...] = (\n",
     "   eta_0 * c\n",
     "   * np.exp(-domain.T.yi[1:, 1:] / a)\n",
-    "   * np.sin(k * domain.T.x)\n",
-    "   * domain.U.mask\n",
+    "   * np.sin(k * domain.T.x[:,:])\n",
+    "   * domain.U.mask[:,:]\n",
     ")\n",
     "# Keep only one wavelength\n",
     "sim.U[domain.T.x > l] = 0\n",
@@ -135,26 +135,24 @@
    },
    "outputs": [],
    "source": [
-    "dist_U = domain.distribute(sim.U_)\n",
-    "dist_V = domain.distribute(sim.V_)\n",
-    "dist_U.update_halos()\n",
-    "dist_V.update_halos()\n",
+    "sim.U.update_halos()\n",
+    "sim.V.update_halos()\n",
     "\n",
     "plotting_interval = 10\n",
     "istep = 0\n",
     "while time <= stop:\n",
-    "    sim.update_surface_pressure_gradient(domain.T.z_, sp_)\n",
-    "    sim.uv_momentum_2d(timestep, tausx_, tausy_, sim.dpdx_, sim.dpdy_)\n",
-    "    dist_U.update_halos()\n",
-    "    dist_V.update_halos()\n",
-    "    sim.update_sealevel(timestep, sim.U_, sim.V_)\n",
+    "    sim.update_surface_pressure_gradient(domain.T.z, sp)\n",
+    "    sim.uv_momentum_2d(timestep, tausx, tausy, sim.dpdx, sim.dpdy)\n",
+    "    sim.U.update_halos()\n",
+    "    sim.V.update_halos()\n",
+    "    sim.update_sealevel(timestep, sim.U, sim.V)\n",
     "    sim.update_depth()\n",
     "\n",
     "    if istep % plotting_interval == 0:\n",
     "        print(istep, time)\n",
     "        Q.set_UVC(sim.U[::nsample, ::nsample], sim.V[::nsample, ::nsample])\n",
     "        title.set_text(time.strftime('Day: %j, Time: %H:%M:%S'))\n",
-    "        pc.set_array(domain.T.z.ravel())\n",
+    "        pc.set_array(domain.T.z[...].ravel())\n",
     "        l.remove()\n",
     "        l = ax.axvline((omega * (time - start).total_seconds() / k) % L, color=\"black\")\n",
     "        fig.canvas.draw()\n",
