--- a/notebooks/test_2d.ipynb
+++ b/notebooks/test_2d.ipynb
@@ -26,21 +26,22 @@
     "sim = pygetm.Simulation(domain, runtype=1, advection_scheme=1)\n",
     "\n",
     "# Idealized surface forcing\n",
-    "tausx, tausx_ = domain.U.array(fill=0.01)\n",
-    "tausy, tausy_ = domain.V.array(fill=0.)\n",
-    "sp, sp_ = domain.T.array(fill=0.)\n",
+    "tausx = domain.U.array(fill=0.01)\n",
+    "tausy = domain.V.array(fill=0.)\n",
+    "sp = domain.T.array(fill=0.)\n",
     "\n",
     "# Time\n",
     "timestep = 10.\n",
     "ntime = int(3600. // timestep)\n",
     "\n",
     "# Set up velocity plot\n",
-    "nsample = 4\n",
+    "nsample = 2\n",
     "fig, ax = matplotlib.pyplot.subplots()\n",
     "pc = ax.pcolormesh(domain.T.xi, domain.T.yi, domain.T.z, vmin=-0.001, vmax=0.001)\n",
     "cb = fig.colorbar(pc)\n",
     "cb.set_label('elevation (m)')\n",
-    "Q = ax.quiver(domain.T.x[::nsample, ::nsample], domain.T.y[::nsample, ::nsample], sim.U[::nsample, ::nsample], sim.V[::nsample, ::nsample], scale=.3)\n",
+    "u, v = sim.U.interp(domain.T) / domain.T.D, sim.V.interp(domain.T) / domain.T.D\n",
+    "Q = ax.quiver(domain.T.x[::nsample, ::nsample], domain.T.y[::nsample, ::nsample], u[::nsample, ::nsample], v[::nsample, ::nsample], scale=.01)\n",
     "title = ax.set_title('time: 0 s')"
    ]
   },
@@ -56,17 +57,18 @@
     "times = timestep * numpy.arange(ntime)\n",
     "Us = numpy.empty_like(times)\n",
     "for istep, time in enumerate(times):\n",
-    "    Us[istep] = sim.U.mean()\n",
-    "    sim.update_surface_pressure_gradient(domain.T.z_, sp_)\n",
-    "    sim.uv_momentum_2d(timestep, tausx_, tausy_, sim.dpdx_, sim.dpdy_)\n",
-    "    sim.update_sealevel(timestep, sim.U_, sim.V_)\n",
+    "    Us[istep] = sim.U[...].mean()\n",
+    "    sim.update_surface_pressure_gradient(domain.T.z, sp)\n",
+    "    sim.uv_momentum_2d(timestep, tausx, tausy, sim.dpdx, sim.dpdy)\n",
+    "    sim.update_sealevel(timestep, sim.U, sim.V)\n",
     "    sim.update_depth()\n",
     "\n",
     "    # Update velocity plot\n",
     "    if istep % plotting_interval == 0:\n",
-    "        Q.set_UVC(sim.U[::nsample, ::nsample], sim.V[::nsample, ::nsample])\n",
+    "        u, v = sim.U.interp(domain.T) / domain.T.D, sim.V.interp(domain.T) / domain.T.D\n",
+    "        Q.set_UVC(u[::nsample, ::nsample], v[::nsample, ::nsample])\n",
     "        title.set_text('time: %s s' % time)\n",
-    "        pc.set_array(domain.T.z.ravel())\n",
+    "        pc.set_array(domain.T.z[...].ravel())\n",
     "        fig.canvas.draw()"
    ]
   },
