--- a/notebooks/test_2d_periodic.ipynb
+++ b/notebooks/test_2d_periodic.ipynb
@@ -26,9 +26,9 @@
     "sim = pygetm.Simulation(domain, runtype=1, advection_scheme=1)\n",
     "\n",
     "# Idealized surface forcing\n",
-    "tausx, tausx_ = domain.U.array(fill=0.01)\n",
-    "tausy, tausy_ = domain.V.array(fill=0.)\n",
-    "sp, sp_ = domain.T.array(fill=0.)\n",
+    "tausx = domain.U.array(fill=0.01)\n",
+    "tausy = domain.V.array(fill=0.)\n",
+    "sp = domain.T.array(fill=0.)\n",
     "\n",
     "# Time\n",
     "timestep = 10.\n",
@@ -40,7 +40,8 @@
     "pc = ax.pcolormesh(domain.T.xi, domain.T.yi, domain.T.z, vmin=-0.001, vmax=0.001)\n",
     "cb = fig.colorbar(pc)\n",
     "cb.set_label('elevation (m)')\n",
-    "Q = ax.quiver(domain.T.x[::nsample, ::nsample], domain.T.y[::nsample, ::nsample], sim.U[::nsample, ::nsample], sim.V[::nsample, ::nsample], scale=.3)\n",
+    "u, v = sim.U.interp(domain.T) / domain.T.D, sim.V.interp(domain.T) / domain.T.D\n",
+    "Q = ax.quiver(domain.T.x[::nsample, ::nsample], domain.T.y[::nsample, ::nsample], u[::nsample, ::nsample], v[::nsample, ::nsample], scale=.005)\n",
     "title = ax.set_title('time: 0 s')"
    ]
   },
@@ -52,28 +53,27 @@
    },
    "outputs": [],
    "source": [
-    "dist_U = domain.distribute(sim.U_)\n",
-    "dist_V = domain.distribute(sim.V_)\n",
-    "dist_U.update_halos()\n",
-    "dist_V.update_halos()\n",
+    "sim.U.update_halos()\n",
+    "sim.V.update_halos()\n",
     "plotting_interval = 1\n",
     "times = timestep * numpy.arange(ntime)\n",
     "Us = numpy.empty_like(times)\n",
     "for istep, time in enumerate(times):\n",
-    "    Us[istep] = sim.U.mean()\n",
+    "    Us[istep] = numpy.mean(sim.U)\n",
     "    \n",
-    "    sim.update_surface_pressure_gradient(domain.T.z_, sp_)\n",
-    "    sim.uv_momentum_2d(timestep, tausx_, tausy_, sim.dpdx_, sim.dpdy_)\n",
-    "    dist_U.update_halos()\n",
-    "    dist_V.update_halos()\n",
-    "    sim.update_sealevel(timestep, sim.U_, sim.V_)\n",
+    "    sim.update_surface_pressure_gradient(domain.T.z, sp)\n",
+    "    sim.uv_momentum_2d(timestep, tausx, tausy, sim.dpdx, sim.dpdy)\n",
+    "    sim.U.update_halos()\n",
+    "    sim.V.update_halos()\n",
+    "    sim.update_sealevel(timestep, sim.U, sim.V)\n",
     "    sim.update_depth()\n",
     "\n",
     "    # Update velocity plot\n",
     "    if istep % plotting_interval == 0:\n",
-    "        Q.set_UVC(sim.U[::nsample, ::nsample], sim.V[::nsample, ::nsample])\n",
+    "        u, v = sim.U.interp(domain.T) / domain.T.D, sim.V.interp(domain.T) / domain.T.D\n",
+    "        Q.set_UVC(u[::nsample, ::nsample], v[::nsample, ::nsample])\n",
     "        title.set_text('time: %s s' % time)\n",
-    "        pc.set_array(domain.T.z.ravel())\n",
+    "        pc.set_array(domain.T.z[...].ravel())\n",
     "        fig.canvas.draw()    "
    ]
   },
@@ -107,53 +107,65 @@
     "distance_from_center = numpy.sqrt((domain.x - 25000)**2 + (domain.y - 15000)**2)\n",
     "domain.mask[distance_from_center < 5000] = 0\n",
     "sim = pygetm.Simulation(domain, runtype=1, advection_scheme=1, apply_bottom_friction=False)\n",
+    "print('Maximum time step: %.3f s' % domain.maxdt)\n",
     "\n",
     "# Idealized surface forcing\n",
-    "tausx, tausx_ = domain.U.array(fill=0.01)\n",
-    "tausy, tausy_ = domain.V.array(fill=0.)\n",
-    "sp, sp_ = domain.T.array(fill=0.)\n",
+    "tausx = domain.U.array(fill=0.01)\n",
+    "tausy = domain.V.array(fill=0.)\n",
+    "sp = domain.T.array(fill=0.)\n",
     "\n",
     "# Time\n",
     "timestep = 5.\n",
     "ntime = int(3600. // timestep)\n",
     "\n",
     "# Set up velocity plot\n",
-    "nsample = 4\n",
+    "nsample = 1\n",
     "fig, ax = matplotlib.pyplot.subplots()\n",
-    "masked_z = numpy.ma.array(domain.T.z, mask=domain.T.mask==0)\n",
+    "masked_z = domain.T.z.ma\n",
     "pc = ax.pcolormesh(domain.T.xi, domain.T.yi, masked_z, vmin=-0.001, vmax=0.001)\n",
     "cb = fig.colorbar(pc)\n",
     "cb.set_label('elevation (m)')\n",
-    "Q = ax.quiver(domain.T.x[::nsample, ::nsample], domain.T.y[::nsample, ::nsample], sim.U[::nsample, ::nsample], sim.V[::nsample, ::nsample], scale=.3)\n",
-    "title = ax.set_title('time: 0 s')"
+    "u, v = sim.U.interp(domain.T) / domain.T.D, sim.V.interp(domain.T) / domain.T.D\n",
+    "Q = ax.quiver(domain.T.x[::nsample, ::nsample], domain.T.y[::nsample, ::nsample], u[::nsample, ::nsample], v[::nsample, ::nsample], scale=.01)\n",
+    "title = ax.set_title('time: 0 s')\n",
+    "V = sim.V[:-1, :]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "dist_U = domain.distribute(sim.U_)\n",
-    "dist_V = domain.distribute(sim.V_)\n",
-    "dist_U.update_halos()\n",
-    "dist_V.update_halos()\n",
+    "sim.U.update_halos()\n",
+    "sim.V.update_halos()\n",
     "plotting_interval = 5\n",
     "times = timestep * numpy.arange(ntime)\n",
     "Us = numpy.empty_like(times)\n",
     "for istep, time in enumerate(times):\n",
-    "    Us[istep] = sim.U.mean()\n",
+    "    Us[istep] = numpy.mean(sim.U)\n",
     "    \n",
-    "    sim.update_surface_pressure_gradient(domain.T.z_, sp_)\n",
-    "    sim.uv_momentum_2d(timestep, tausx_, tausy_, sim.dpdx_, sim.dpdy_)\n",
-    "    dist_U.update_halos()\n",
-    "    dist_V.update_halos()\n",
-    "    sim.update_sealevel(timestep, sim.U_, sim.V_)\n",
+    "    sim.update_surface_pressure_gradient(domain.T.z, sp)\n",
+    "    sim.uv_momentum_2d(timestep, tausx, tausy, sim.dpdx, sim.dpdy)\n",
+    "    sim.U.update_halos()\n",
+    "    sim.V.update_halos()\n",
+    "    sim.update_sealevel(timestep, sim.U, sim.V)\n",
     "    sim.update_depth()\n",
+    "\n",
+    "    assert (sim.U[domain.U.mask.values==0]==0).all()\n",
+    "    assert (sim.V[domain.V.mask.values==0]==0).all()\n",
+    "    assert (sim.fU[...]==0).all()\n",
+    "    assert (sim.fV[...]==0).all()\n",
+    "    V_asym = (V + V[::-1, :]).max() - (V + V[::-1, :]).min()\n",
+    "    V_range = V.max() - V.min()\n",
+    "    print('Asymmetry in V: %s' % ( V_asym / V_range if V_asym > 0 else 0.,))\n",
     "\n",
     "    # Update velocity plot\n",
     "    if istep % plotting_interval == 0:\n",
-    "        Q.set_UVC(sim.U[::nsample, ::nsample], sim.V[::nsample, ::nsample])\n",
+    "        u, v = sim.U.interp(domain.T) / domain.T.D, sim.V.interp(domain.T) / domain.T.D\n",
+    "        Q.set_UVC(u[::nsample, ::nsample], v[::nsample, ::nsample])\n",
     "        title.set_text('time: %s s' % time)\n",
     "        pc.set_array(masked_z.ravel())\n",
     "        fig.canvas.draw()    "
