--- a/notebooks/test_advection.ipynb
+++ b/notebooks/test_advection.ipynb
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "totals = [var[...].sum()]\n",
-    "adv = pygetm.Advection(domain, scheme=1)\n",
+    "adv = pygetm.Advection(domain.T, scheme=1)\n",
     "for i in range(1, Nmax):\n",
     "    adv.calculate(u, v, timestep, var)\n",
     "    if i % nsample == 0:\n",
