--- a/notebooks/Kelvin_wave_in_a_channel.ipynb
+++ b/notebooks/Kelvin_wave_in_a_channel.ipynb
@@ -86,19 +86,19 @@
     "print(\"Period: {:.0f} minutes = {:.1f} hours\".format(2*np.pi/omega / 60, 2*np.pi/omega / 3600))\n",
     "domain.T.z[...] = (\n",
     "    eta_0\n",
-    "    * np.exp(-domain.T.yi[1:, 1:] / a)\n",
-    "    * np.sin(k * domain.T.xi[1:, 1:])\n",
-    "    * domain.T.mask[:,:]\n",
+    "    * np.exp(-domain.T.y / a)\n",
+    "    * np.sin(k * domain.T.x)\n",
+    "    * domain.T.mask\n",
     ")\n",
     "sim.U[...] = (\n",
     "   eta_0 * c\n",
-    "   * np.exp(-domain.T.yi[1:, 1:] / a)\n",
-    "   * np.sin(k * domain.T.x[:,:])\n",
-    "   * domain.U.mask[:,:]\n",
+    "   * np.exp(-domain.U.y / a)\n",
+    "   * np.sin(k * domain.U.x)\n",
+    "   * domain.U.mask\n",
     ")\n",
     "# Keep only one wavelength\n",
-    "sim.U[domain.T.x > l] = 0\n",
-    "domain.T.z[domain.T.xi[1:, 1:] > l] = 0\n",
+    "sim.U[domain.U.x > l] = 0\n",
+    "domain.T.z[domain.T.x > l] = 0\n",
     "\n",
     "# Set the time-stepping\n",
     "start = datetime.datetime(2020, 1, 1, 0, 0)\n",
